2013-08-30  tasogare66 <tasogare66@gmail.com>

	* red-rogue-cs:
	Console.cs追加、key入力のeventを実行するように

2013-08-27  tasogare66 <tasogare66@gmail.com>

	* red-rogue-cs:
	Key.cs コンパイル通るように対応

2013-08-25  tasogare66 <tasogare66@gmail.com>

	* red-rogue-cs:
	MenuCarousel.cs コンパイル通るように、その他menu関連追加
	PSM_SDK_1.20.00に更新 (特に変更なし)

2013-08-23  tasogare66 <tasogare66@gmail.com>

	* red-rogue-cs:
	event関連追加

2013-08-10  tasogare66 <tasogare66@gmail.com>

	* red-rogue-cs:
	event関連対応準備

2013-08-09  tasogare66 <tasogare66@gmail.com>

	* red-rogue-cs:
	Menu関連をいくつか追加

2013-08-04  tasogare66 <tasogare66@gmail.com>

	* red-rogue-cs:
	TextBox対応

2013-08-04  tasogare66 <tasogare66@gmail.com>

	* red-rogue-cs:
	TextBox コンパイル通るように対応

2013-08-02  tasogare66 <tasogare66@gmail.com>

	* red-rogue-cs:
	TextBox対応の準備

2013-07-31  tasogare66 <tasogare66@gmail.com>

	* red-rogue-cs:
	TextBoxなど追加、licence.txt追加

2013-07-26  tasogare66 <tasogare66@gmail.com>

	* red-rogue-cs:
	ColliderEntity.cs, Entity.cs, Collider.cs, CollisionWorld.csを追加

2013-07-18  tasogare66 <tasogare66@gmail.com>

	* red-rogue-cs:
	MapTileConverter.csを追加

2013-07-16  tasogare66 <tasogare66@gmail.com>

	* red-rogue-cs:
	Content.csを追加

2013-07-11  tasogare66 <tasogare66@gmail.com>

	* red-rogue-cs:
	level関連、Map.cs, MapBitmap.csをとりあえず追加

	* red-rogue-cs:
	level関連、Room.csなど追加

2013-07-10  tasogare66 <tasogare66@gmail.com>

	* red-rogue-cs:
	Menu関連をいくつか追加

2013-07-06  tasogare66 <tasogare66@gmail.com>

	* red-rogue-cs:
	XorRandom.cs不具合修正

	* red-rogue-cs:
	XorRandom.csを追加

2013-07-04  tasogare66 <tasogare66@gmail.com>

	* red-rogue-cs:
	Node.csを追加

	* red-rogue-cs:
	dos改行のソースを修正

	* red-rogue-cs:
	解像度変更、タイトル表示対応

2013-07-02  tasogare66 <tasogare66@gmail.com>

	* red-rogue-cs:
	HiddenIntを追加

2013-06-30  tasogare66 <tasogare66@gmail.com>

	* red-rogue-cs:
	UserDataを追加、ほとんどコメントアウト、TITLEまで遷移するように

2013-06-29  tasogare66 <tasogare66@gmail.com>

	* red-rogue-cs:
	projectを追加

以上