@@ -1,0 +1,7 @@
+﻿using System;
+
+namespace flash.display
+{
+    public interface IBitmapDrawable {
+    }
+}
