@@ -1,0 +1,13 @@
+namespace flash.geom
+{
+	public class Matrix {
+		public double a, b, c, d;
+		public double tx, ty;
+
+		public Matrix() { }
+	}
+}
+
+// Local Variables:
+// coding: utf-8
+// End:
