@@ -1,3 +1,8 @@
+2013-09-03  tasogare66 <tasogare66@gmail.com>
+
+	* red-rogue-cs:
+	Menu.csのコンストラクタ通るように
+
 2013-08-30  tasogare66 <tasogare66@gmail.com>
 
 	* red-rogue-cs:
